# algolia-recommend-rs

./: .env.example  .gitignore  Cargo.toml  README.md
.github/workflows/: ci.yml
src/: client.rs  error.rs  lib.rs  models.rs
tests/: live_tests.rs  recommend_tests.rs
