[package]
name = "algolia-recommend"
version = "0.1.0"
edition = "2021"
license = "MIT"
description = "Minimal async Rust client for Algolia Recommend API"
repository = "https://example.com/algolia-recommend"
keywords = ["algolia", "recommend", "search", "client"]

[dependencies]
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "1.0"

[dev-dependencies]
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
httpmock = "0.7"


