[package]
name = "algolia-recommend-rs"
authors = ["Raed667"]
version = "0.0.4"
edition = "2021"
license = "MIT"
description = """
Async Rust client for Algolia Recommend API (unofficial)
"""
repository = "https://github.com/raed667/algolia-recommend-rs"
documentation = "https://docs.rs/algolia-recommend-rs"
homepage = "https://github.com/raed667/algolia-recommend-rs"
keywords = ["algolia", "recommend", "search", "client"]
include = ["src/", "LICENSE", "README.md"]

[dependencies]
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "1.0"

[dev-dependencies]
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
httpmock = "0.7"


